(feat) apply kiko-plus  style

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 _gh_pages
 _site
 .ruby-version
+.sass-cache
+Gemfile.lock
+_drafts
+.jsbeautifyrc
 
 # Numerous always-ignore extensions
 *.diff
@@ -40,3 +44,4 @@ validation-report.json
 # Folders to ignore
 node_modules
 bower_components
+
